linhas de comando para SQL

--- a/dia03/09-EXERCICIOS_CORRECAO.ipynb
+++ b/dia03/09-EXERCICIOS_CORRECAO.ipynb
@@ -731,7 +731,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "EXERCICIOS_CORRECAO",
+   "notebookName": "09-EXERCICIOS_CORRECAO",
    "widgets": {}
   },
   "language_info": {
